--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 .venv
+prime_assurance/prime_assurance/__pycache__
+prime_assurance/assurance/migrations/__pycache__
+prime_assurance/assurance/__pycache__
+prime_assurance/db.sqlite3
