suppression __pycache__ des fichiers suivis

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,4 @@ prime_assurance/assurance/__pycache__
 prime_assurance/prime_assurance/__pycache__
 prime_assurance/db.sqlite3
 prime_assurance/assurance/migrations/__pycache__
-prime_assurance/db.sqlite3
+prime_assurance/prime_assurance/__pycache__
