--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
 asgiref==3.8.1
 Django==5.1.5
+django-widget-tweaks==1.5.0
 python-dotenv==1.0.1
 sqlparse==0.5.3
+scikit-learn
+pandas
+cloudpickle
