--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ prime_assurance/prime_assurance/__pycache__
 prime_assurance/db.sqlite3
 prime_assurance/assurance/migrations/__pycache__
 prime_assurance/prime_assurance/__pycache__
+/staticfiles/
 # Created by https://www.toptal.com/developers/gitignore/api/database
 # Edit at https://www.toptal.com/developers/gitignore?templates=database
 
